ajuste_cor_footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1043,7 +1043,7 @@ img
 {
     font-size: var(--smaller-font-size);
     text-align: center;
-    color: var(--text-color-light);
+    color: #FFF;
     margin-top: var(--mb-3);
 }
 
