--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,6 @@ body.dark-theme {
     --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
 }
 
-
 /* BUTTON DARK/LIGHT */
 .nav__btns {
     display: flex;
@@ -103,7 +102,6 @@ body.dark-theme {
 .change-theme:hover {
     color: var(--first-color);
 }
-
 
 /* BASE */
 * {
@@ -145,7 +143,6 @@ img {
     height: auto;
 }
 
-
 /* REUSABLE CSS CLASSES */
 .section {
     padding: 2rem 0 4rem;
@@ -166,7 +163,6 @@ img {
     text-align: center;
     ;
 }
-
 
 /* LAYOUT */
 .container {
@@ -281,7 +277,6 @@ img {
     box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
 }
 
-
 /* HOME */
 .home__container {
     gap: 1rem;
@@ -329,13 +324,9 @@ img {
 }
 
 .home__description {
+    text-align: justify;
     margin-bottom: var(--mb-2);
 }
-
-/* .home__scroll */
-/* { */
-/* display: none; */
-/* } */
 
 .home__scroll-button {
     color: var(--first-color);
@@ -360,7 +351,6 @@ img {
 .home__scroll-arrow {
     font-size: 1.25rem;
 }
-
 
 /* BUTTONS */
 .button {
@@ -402,7 +392,6 @@ img {
     color: var(--first-color-alt);
 }
 
-
 /* ABOUT */
 .about__img {
     width: 200px;
@@ -412,7 +401,7 @@ img {
 }
 
 .about__description {
-    text-align: center;
+    text-align: justify;
     margin-bottom: var(--mb-2-5);
 }
 
@@ -446,7 +435,6 @@ img {
 .about__icon {
     margin-right: 10px;
 }
-
 
 /* SKILLS */
 .skills__container {
@@ -501,7 +489,7 @@ img {
 }
 
 .skills__bar,
-.skills__percentage {
+.skills__filling {
     height: 5px;
     border-radius: 0.25rem;
 }
@@ -510,49 +498,9 @@ img {
     background-color: var(--first-color-lighter);
 }
 
-.skills__percentage {
+.skills__filling {
     display: block;
     background-color: var(--first-color);
-}
-
-.skills__html {
-    width: 90%;
-}
-
-.skills__css {
-    width: 80%;
-}
-
-.skills__js {
-    width: 90%;
-}
-
-.skills__react {
-    width: 65%;
-}
-
-.skills__php {
-    width: 80%;
-}
-
-.skills__python {
-    width: 80%;
-}
-
-.skills__node {
-    width: 52%;
-}
-
-.skills__sql {
-    width: 85%;
-}
-
-.skills__unity {
-    width: 72%;
-}
-
-.skills__csharp {
-    width: 85%;
 }
 
 .skills__close .skills__list {
@@ -568,7 +516,6 @@ img {
 .skills__open .skills__arrow {
     transform: rotate(-180deg);
 }
-
 
 /* QUALIFICATIONS */
 .qualification__tabs {
@@ -642,107 +589,6 @@ img {
     color: var(--first-color);
 }
 
-
-/* SERVICES */
-.services__container {
-    gap: 1.5rem;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.services__content {
-    position: relative;
-    background-color: var(--container-color);
-    padding: 3.5rem 0.5rem 1.25rem 1.5rem;
-    border-radius: 0.25rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
-    transition: 0.3s;
-}
-
-.services__content:hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-}
-
-.services__icon {
-    display: block;
-    font-size: 1.5rem;
-    color: var(--first-color);
-    margin-bottom: var(--mb-1);
-}
-
-.services__title {
-    font-size: var(--h3-font-size);
-    margin-bottom: var(--mb-1);
-    font-weight: var(--font-medium);
-}
-
-.services__button {
-    cursor: pointer;
-    font-size: var(--small-font-size);
-}
-
-.services__button:hover .button__icon {
-    transform: translateX(0.25rem);
-}
-
-.services__modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0 1rem;
-    z-index: var(--z-modal);
-    opacity: 0;
-    visibility: hidden;
-    transition: 0.3s;
-}
-
-.services__modal-content {
-    position: relative;
-    background-color: var(--container-color);
-    padding: 1.5rem;
-    border-radius: 0.5rem;
-}
-
-.services__modal-services {
-    row-gap: 1rem;
-}
-
-.services__modal-service {
-    display: flex;
-}
-
-.services__modal-title {
-    font-size: var(--h3-font-size);
-    font-weight: var(--font-medium);
-    margin-bottom: var(--mb-1-5);
-}
-
-.services__modal-close {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    font-size: 1.5rem;
-    color: var(--first-color);
-    cursor: pointer;
-}
-
-.services__modal-icon {
-    color: var(--first-color);
-    margin-right: var(--mb-025);
-}
-
-/* ACTIVE MODAL */
-.active-modal {
-    opacity: 1;
-    visibility: visible;
-}
-
-
 /* PORTFOLIO */
 .portfolio__container {
     overflow: initial;
@@ -755,6 +601,7 @@ img {
 .portfolio__img {
     width: 265px;
     border-radius: 0.5rem;
+    border: 0.125rem var(--first-color-second) solid;
     justify-self: center;
 }
 
@@ -803,13 +650,6 @@ img {
 .swiper-pagination-bullet {
     outline: none;
 }
-
-
-/* PROJECT IN MIND */
-
-
-/* TESTTIMONIAL */
-
 
 /* CONTACT ME */
 .contact__container {
@@ -886,16 +726,6 @@ img {
     font-size: var(--small-font-size);
 }
 
-.footer__links {
-    display: flex;
-    flex-direction: column;
-    row-gap: 1.5rem;
-}
-
-.footer__link:hover {
-    color: var(--first-color-lighter);
-}
-
 .footer__social {
     font-size: 1.25rem;
     margin-right: var(--mb-1-5);
@@ -905,7 +735,7 @@ img {
     color: var(--first-color-lighter);
 }
 
-.footer__copy {
+.footer__copyright {
     font-size: var(--smaller-font-size);
     text-align: center;
     color: #FFF;
@@ -967,7 +797,6 @@ img {
 ::-webkit-scrollbar-thumb:hover {
     background-color: var(--text-color-light);
 }
-
 
 /* MEDIA QUERIES */
 
@@ -1128,10 +957,6 @@ img {
         width: 350px;
     }
 
-    .about__description {
-        text-align: initial;
-    }
-
     .about__info {
         justify-content: space-between;
     }
@@ -1178,7 +1003,7 @@ img {
     }
 
     .footer__container {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
 
     .footer__bg {
